--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE HTML>
-<!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>百年荣耀 | 中国一百年来科技成就</title>
 		<meta charset="utf-8" />
+		<meta name="description" content="100年来，中国科技飞跃发展，科学技术是第一生产力，创新驱动发展，创新引领发展">
+		<meta name="keywords" content="中国, 百年, 100年, 科技, 科技发展, 共产党">
+		<meta name="author" content="Qizhen Yang">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<!-- CSS by HTML5Up-->
 	</head>
 	<body class="is-preload">
 
@@ -26,6 +25,7 @@
 						不仅仅是科学技术的创新，还是体制机制的变革，更体现为制度创新
 							<br/>
 						创新汇聚成澎湃的创新潮流，为中国生产力的快速发展注入源源不断的动力和活力。</p>
+						<small>作者 杨其臻</small>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -153,7 +153,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; 2021 杨其臻</li><li>CSS by HTML5 UP</li></ul>
+						<ul><li>&copy; 2021 杨其臻</li></ul>
 					</div>
 
 			</div>
